// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Dropdown /> should allow to render menu inside another element 1`] = `
<div>
  <div
    id="menu-container"
  >
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«rb»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-«rf»"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-«rb»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«rb»-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-«rc»"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should allow to use groups 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-«rh»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«rh»-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-«ri»"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«rh»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 1
          </div>
          <div
            class="options"
          >
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-«rk»"
              tabindex="0"
            >
              Item 1
            </li>
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-«rl»"
              tabindex="0"
            >
              Item 2
            </li>
          </div>
        </div>
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 2
          </div>
          <div
            class="options"
          >
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-«rm»"
              tabindex="0"
            >
              Item 3
            </li>
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-«rn»"
              tabindex="0"
            >
              Item 4
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-«r6»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r6»-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-«r7»"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«r6»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-«r9»"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 2`] = `
<div>
  <div
    class="junipero dropdown disabled"
    id="junipero-dropdown-«r6»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r6»-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-«r7»"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-«r1»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r1»-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-«r2»"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 2`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-«r1»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r1»-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-«r2»"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«r1»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-«r4»"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: In dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-«r11»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r11»-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-«r12»"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«r11»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-«r14»"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-«r11»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r11»-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-«r12»"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Exit: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-«r11»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r11»-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-«r12»"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Already in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-«r16»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r16»-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-«r17»"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«r16»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-«r16»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r16»-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-«r17»"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«r16»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-«r19»"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Exit: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-«r16»"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-«r16»-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-«r17»"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-«r16»-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    />
  </div>
</div>
`;
